objects/EUR_TR_InvoiceSummary__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_12MonthsCount__c</fullName>
        <label>EUR_TR_12MonthsCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_3MonthsCount__c</fullName>
        <label>EUR_TR_3MonthsCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_6MonthsCount__c</fullName>
        <label>EUR_TR_6MonthsCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandQualitySize__c</fullName>
        <label>EUR_TR_BrandQualitySize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>EUR_TR_ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_TR_HouseOfBrands__c</fullName>
        <label>EUR_TR_HouseOfBrands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EUR_TR_RelatedAccount</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipName>EUR_TR_InvoiceSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EUR TR Invoice Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{00000000}</displayFormat>
        <label>EUR_TR_InvoiceSummary No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR TR Invoice Summary</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_InvoiceSummary</fullName>
        <active>true</active>
        <label>EUR_TR_InvoiceSummary</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>